--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -1,4 +1,7 @@
 ---
+php_repo_name: "remi"
+php_repo_url: "http://rpms.remirepo.net/enterprise/{{ansible_distribution_version.split('.')[0]}}/remi/{{ansible_architecture}}/"
+disable_gpg_check: yes
 php_packages:
   - 'php'
   - 'php-bcmath'
