--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,23 +6,23 @@ php_shell_path: '/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin:/r
 system_service: '/lib/systemd/system'
 system_profile: '/etc/profile'
 php_fpm_exporter_port: '9253'
-disable_functions: 'php_uname, getmyuid, getmypid, passthru, leak, listen, diskfreespace, tmpfile, link, ignore_user_abord, shell_exec, dl, set_time_limit, exec, system, highlight_file, source, show_source, fpaththru, virtual, posix_ctermid, posix_getcwd, posix_getegid, posix_geteuid, posix_getgid, posix_getgrgid, posix_getgrnam, posix_getgroups, posix_getlogin, posix_getpgid, posix_getpgrp, posix_getpid, posix, _getppid, posix_getpwnam, posix_getpwuid, posix_getrlimit, posix_getsid, posix_getuid, posix_isatty, posix_kill, posix_mkfifo, posix_setegid, posix_seteuid, posix_setgid, posix_setpgid, posix_setsid, posix_setuid, posix_times, posix_ttyname, posix_uname, proc_open, proc_close, proc_get_status, proc_nice, proc_terminate, phpinfo'
-realpath_cache_size: '16M'
-expose_php: 'Off'
-max_execution_time: '60'
-max_input_time: '60'
-memory_limit: '256M'
-error_log: 'syslog'
-post_max_size: '2M'
-upload_tmp_dir: '/tmp'
-upload_max_filesize: '5M'
-date_timezone: 'Asia/Shanghai'
-user: 'nobody'
-group: 'nobody'
-listen: '0.0.0.0:9000'
-listen_backlog: '16384'
-listen_owner: 'nobody'
-listen_group: 'nobody'
-listen_mode: '0660'
-listen_allowed_clients: '127.0.0.1'
-pm: 'dynamic'
+php_disable_functions: 'php_uname, getmyuid, getmypid, passthru, leak, listen, diskfreespace, tmpfile, link, ignore_user_abord, shell_exec, dl, set_time_limit, exec, system, highlight_file, source, show_source, fpaththru, virtual, posix_ctermid, posix_getcwd, posix_getegid, posix_geteuid, posix_getgid, posix_getgrgid, posix_getgrnam, posix_getgroups, posix_getlogin, posix_getpgid, posix_getpgrp, posix_getpid, posix, _getppid, posix_getpwnam, posix_getpwuid, posix_getrlimit, posix_getsid, posix_getuid, posix_isatty, posix_kill, posix_mkfifo, posix_setegid, posix_seteuid, posix_setgid, posix_setpgid, posix_setsid, posix_setuid, posix_times, posix_ttyname, posix_uname, proc_open, proc_close, proc_get_status, proc_nice, proc_terminate, phpinfo'
+php_realpath_cache_size: '16M'
+php_expose_php: 'Off'
+php_max_execution_time: '60'
+php_max_input_time: '60'
+php_memory_limit: '256M'
+php_error_log: 'syslog'
+php_post_max_size: '2M'
+php_upload_tmp_dir: '/tmp'
+php_upload_max_filesize: '5M'
+php_date_timezone: 'Asia/Shanghai'
+php_user: 'nobody'
+php_group: 'nobody'
+php_listen: '0.0.0.0:9000'
+php_listen_backlog: '16384'
+php_listen_owner: 'nobody'
+php_listen_group: 'nobody'
+php_listen_mode: '0660'
+php_listen_allowed_clients: '127.0.0.1'
+php_pm: 'dynamic'
