--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,28 +1,43 @@
 ---
+# General parameters #
 #php_version='56'
-php_fpm_port: '9000'
-php_conf_path: '/opt/remi/php{{ php_version }}/root/etc'
 php_shell_path: '/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin:/root/bin:/opt/remi/php56/root/usr/bin:/opt/remi/php56/root/usr/sbin'
-system_service: '/lib/systemd/system'
+php_conf_path: '/opt/remi/php{{ php_version }}/root/etc'
 system_profile: '/etc/profile'
-php_fpm_exporter_port: '9253'
-php_disable_functions: 'php_uname, getmyuid, getmypid, passthru, leak, listen, diskfreespace, tmpfile, link, ignore_user_abord, shell_exec, dl, set_time_limit, exec, system, highlight_file, source, show_source, fpaththru, virtual, posix_ctermid, posix_getcwd, posix_getegid, posix_geteuid, posix_getgid, posix_getgrgid, posix_getgrnam, posix_getgroups, posix_getlogin, posix_getpgid, posix_getpgrp, posix_getpid, posix, _getppid, posix_getpwnam, posix_getpwuid, posix_getrlimit, posix_getsid, posix_getuid, posix_isatty, posix_kill, posix_mkfifo, posix_setegid, posix_seteuid, posix_setgid, posix_setpgid, posix_setsid, posix_setuid, posix_times, posix_ttyname, posix_uname, proc_open, proc_close, proc_get_status, proc_nice, proc_terminate, phpinfo'
-php_realpath_cache_size: '16M'
-php_expose_php: 'Off'
-php_max_execution_time: '60'
-php_max_input_time: '60'
-php_memory_limit: '256M'
-php_error_log: 'syslog'
-php_post_max_size: '2M'
-php_upload_tmp_dir: '/tmp'
-php_upload_max_filesize: '5M'
-php_date_timezone: 'Asia/Shanghai'
-php_user: 'nobody'
-php_group: 'nobody'
-php_listen: '0.0.0.0:9000'
-php_listen_backlog: '16384'
-php_listen_owner: 'nobody'
-php_listen_group: 'nobody'
-php_listen_mode: '0660'
-php_listen_allowed_clients: '127.0.0.1'
-php_pm: 'dynamic'
+system_service: '/lib/systemd/system'
+
+# Listen port #
+php_fpm_port: '9000' # php-fpm instance
+php_fpm_exporter_port: '9253' # Prometheus exporter
+
+# PHP Environment Variables #
+php_allow_url_fopen: 'On' # Whether to allow accessing URL object like files
+php_allow_url_include: 'Off' # Whether to allow use of URL-aware with the include/require functions
+php_date_timezone: 'Asia/Shanghai' # The default timezone used by all date/time functions
+php_default_socket_timeout: '60' # Default timeout for socket based streams in seconds
+php_disable_functions: 'php_uname, getmyuid, getmypid, passthru, leak, listen, diskfreespace, tmpfile, link, ignore_user_abord, shell_exec, dl, set_time_limit, exec, system, highlight_file, source, show_source, fpaththru, virtual, posix_ctermid, posix_getcwd, posix_getegid, posix_geteuid, posix_getgid, posix_getgrgid, posix_getgrnam, posix_getgroups, posix_getlogin, posix_getpgid, posix_getpgrp, posix_getpid, posix, _getppid, posix_getpwnam, posix_getpwuid, posix_getrlimit, posix_getsid, posix_getuid, posix_isatty, posix_kill, posix_mkfifo, posix_setegid, posix_seteuid, posix_setgid, posix_setpgid, posix_setsid, posix_setuid, posix_times, posix_ttyname, posix_uname, proc_open, proc_close, proc_get_status, proc_nice, proc_terminate, phpinfo' # Disable certain functions for security reasons
+php_emergency_restart_interval: '60' # Interval of time to determine when a graceful restart in seconds
+php_emergency_restart_threshold: '20' # Number of child processes exit with SIGSEGV or SIGBUS signal
+php_error_log: 'syslog' # Send an error message to the defined error handling routines
+php_expose_php: 'Off' # Exposes to the world that PHP is installed on the server
+php_file_uploads: 'On' # Whether or not to allow HTTP file uploads
+php_group: 'nobody' # Unix group of processes
+php_listen: '0.0.0.0' # The address on which to accept FastCGI requests
+php_listen_allowed_clients: 'any' # List of addresses of FastCGI clients which are allowed to connect
+php_listen_backlog: '16384' # The maximum rate at which a server can accept new TCP connections on a socket
+php_listen_group: 'nobody' # Listen owner group
+php_listen_mode: '0660' # Listen permissions
+php_listen_owner: 'nobody' # Listen owner user
+php_log_level: 'notice' # Error log level
+php_max_execution_time: '60' # Script maximum time is allowed to run before it is terminated by the parser in seconds
+php_max_file_uploads: '20' # The maximum number of files allowed to be uploaded via single request
+php_max_input_time: '60' # Script maximum time is allowed to parse input data in seconds
+php_max_requests: '300' # The number of requests each child process should execute before respawning
+php_memory_limit: '256M' # The maximum amount of memory in bytes that a script is allowed to allocate
+php_pm: 'dynamic' # Child process control manager
+php_post_max_size: '2M' # The maximum size of post data allowed
+php_process_control_timeout: '10' # Time limit for child processes to wait for a reaction on signals from master in seconds
+php_realpath_cache_size: '16M' # The maximum size of the realpath cache to be used by PHP
+php_upload_max_filesize: '5M' # The maximum number of files allowed to be uploaded
+php_upload_tmp_dir: '/tmp' # The temporary directory used for storing files when doing file upload
+php_user: 'nobody' # Unix user of processes
