--- a/tasks/php-fpm_exporter.yml
+++ b/tasks/php-fpm_exporter.yml
@@ -17,3 +17,16 @@
     - { src: 'php-fpm_exporter.default', dest: '/etc/default/php-fpm_exporter' }
     - { src: 'php-fpm_exporter.service', dest: '/lib/systemd/system/php-fpm_exporter.service' }
   register: exporter_config
+
+- name: Register exporter service with an http health check
+  uri:
+    url: 'http://{{ item }}:{{ consul_http_port }}/v1/agent/service/register'
+    method: 'PUT'
+    headers:
+      X-Consul-Token: "{{ consul_exporter_token }}"
+    body: '{"ID":"{{ inventory_hostname | upper }}_php-fpm_exporter","name":"php-fpm_exporter","address":"{{ ansible_default_ipv4.address }}","port":{{ php_fpm_exporter_port }},"meta":{"instance":"{{ inventory_hostname | upper }}","group":"{{ group_names[0] | upper }}","environment":"{{ environments | upper }}"},"checks":[{"http":"http://{{ ansible_default_ipv4.address }}:{{ php_fpm_exporter_port }}/metrics","interval":"60s","tls_skip_verify":true,"method":"HEAD","timeout":"5s"}]}'
+    body_format: 'json'
+  environment:
+    no_proxy: '{{ item }}'
+  with_items: '{{ consul_clients }}'
+  when: consul_is_register
