--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,7 @@
 # General parameters #
 php_is_install: false # A boolean value, whether install the php-fpm.
 php_version: '56' # Specify the php-fpm version.
+php_selinux: 'false' # SELinux security policy.
 
 # Service Mesh #
 environments: 'SIT' # Define the service environment.
@@ -20,11 +21,26 @@ php_allow_url_fopen: 'On' # Whether to allow accessing URL object like files
 php_allow_url_include: 'Off' # Whether to allow use of URL-aware with the include/require functions
 php_date_timezone: 'Asia/Shanghai' # The default timezone used by all date/time functions
 php_default_socket_timeout: '60' # Default timeout for socket based streams in seconds
-php_emergency_restart_interval: '60' # Interval of time to determine when a graceful restart in seconds
-php_emergency_restart_threshold: '20' # Number of child processes exit with SIGSEGV or SIGBUS signal
 php_error_log: 'syslog' # Send an error message to the defined error handling routines
 php_expose_php: 'Off' # Exposes to the world that PHP is installed on the server
 php_file_uploads: 'On' # Whether or not to allow HTTP file uploads
+php_max_execution_time: '60' # Script maximum time is allowed to run before it is terminated by the parser in seconds
+php_max_file_uploads: '20' # The maximum number of files allowed to be uploaded via single request
+php_max_input_time: '60' # Script maximum time is allowed to parse input data in seconds
+php_memory_limit: '256' # The maximum amount of memory in megabyte that a script is allowed to allocate
+php_post_max_size: '2' # The maximum size in megabyte of post data allowed.
+php_realpath_cache_size: '16' # The maximum size in megabyte of the realpath cache to be used by PHP
+php_upload_max_filesize: '5' # The maximum size in megabyte of files allowed to be uploaded
+php_upload_tmp_dir: '/tmp' # The temporary directory used for storing files when doing file upload
+
+# PHP-FPM Variables #
+php_emergency_restart_interval: '60' # Interval of time to determine when a graceful restart in seconds
+php_emergency_restart_threshold: '20' # Number of child processes exit with SIGSEGV or SIGBUS signal
+php_log_level: 'notice' # Error log level
+php_process_control_timeout: '10' # Time limit for child processes to wait for a reaction on signals from master in seconds
+
+# PHP-FPM POOL Variables #
+php_user: 'nobody' # Unix user of processes
 php_group: 'nobody' # Unix group of processes
 php_listen: '0.0.0.0' # The address on which to accept FastCGI requests
 php_listen_allowed_clients: 'any' # List of addresses of FastCGI clients which are allowed to connect
@@ -32,16 +48,5 @@ php_listen_backlog: '16384' # The maximum rate at which a server can accept new 
 php_listen_group: 'nobody' # Listen owner group
 php_listen_mode: '0660' # Listen permissions
 php_listen_owner: 'nobody' # Listen owner user
-php_log_level: 'notice' # Error log level
-php_max_execution_time: '60' # Script maximum time is allowed to run before it is terminated by the parser in seconds
-php_max_file_uploads: '20' # The maximum number of files allowed to be uploaded via single request
-php_max_input_time: '60' # Script maximum time is allowed to parse input data in seconds
-php_max_requests: '300' # The number of requests each child process should execute before respawning
-php_memory_limit: '256M' # The maximum amount of memory in bytes that a script is allowed to allocate
+php_pm_max_requests: '300' # The number of requests each child process should execute before respawning
 php_pm: 'dynamic' # Child process control manager
-php_post_max_size: '2M' # The maximum size of post data allowed
-php_process_control_timeout: '10' # Time limit for child processes to wait for a reaction on signals from master in seconds
-php_realpath_cache_size: '16M' # The maximum size of the realpath cache to be used by PHP
-php_upload_max_filesize: '5M' # The maximum number of files allowed to be uploaded
-php_upload_tmp_dir: '/tmp' # The temporary directory used for storing files when doing file upload
-php_user: 'nobody' # Unix user of processes
