--- a/tasks/exporter.yml
+++ b/tasks/exporter.yml
@@ -1,19 +1,29 @@
 ---
-- name: Prometheus program binary transfer
+- name: PHP-FPM exporter program binary transfer
   unarchive:
     src: 'php-fpm_exporter.tar.xz'
     dest: '/usr/local/bin'
     owner: 'nobody'
     group: 'nobody'
     mode: '0755'
-  register: exporter_updated
+  register: php_exporter_updated
 
-- name: Prometheus configure file transfer
-  copy:
+- name: PHP-FPM exporter configure file transfer
+  template:
     src: '{{ item.src }}'
     dest: '{{ item.dest }}'
-    mode: 0644
+    mode: '0644'
+    owner: 'root'
+    group: 'root'
   with_items:
-    - { src: 'php-fpm_exporter.default', dest: '/etc/default/php-fpm_exporter' }
-    - { src: 'php-fpm_exporter.service', dest: '/lib/systemd/system/php-fpm_exporter.service' }
-  register: exporter_config
+    - { src: 'php-fpm_exporter.default.j2', dest: '/etc/default/php-fpm_exporter' }
+    - { src: 'php-fpm_exporter.service.j2', dest: '/lib/systemd/system/php-fpm_exporter.service' }
+  register: php_exporter_config
+
+- name: Ensure PHP-FPM exporter service is enabled
+  systemd:
+    name: 'php-fpm_exporter.service'
+    enabled: 'yes'
+    state: 'restarted'
+    daemon_reload: 'yes'
+  when: php_exporter_updated is changed or php_exporter_config is changed
