--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,23 +2,26 @@
 - name: Include tasks for specific OS
   include: '{{ ansible_os_family }}.yml'
 
+- name: Straight to getenforce selinux status
+  include: 'selinux.yml'
+
 - name: Configure the firewall
   include: 'firewall.yml'
 
 - name: Configuration the php-fpm
   include: 'configureation.yml'
 
-#- name: Include prometheus exporter tasks
-#  include: 'exporter.yml'
+- name: Include prometheus exporter tasks
+  include: 'exporter.yml'
 
-#- name: Registered with HashiCorp Consul
-#  include: 'register.yml'
-#  when: consul_public_register
+- name: Registered with HashiCorp Consul
+  include: 'register.yml'
+  when: consul_public_register
 
-#- name: Reload the service
-#  shell: echo ''
-#  notify: 'Reloading the PHP service'
-#  when: php_updated is changed or php_config is changed or php_service is changed or exporter_updated is changed or exporter_config is changed
+- name: Reload the service
+  shell: echo ''
+  notify: 'Ensure PHP service is enabled'
+  when: php_updated is changed or php_config is changed or php_service is changed
 
-#- name: Force the handler to run immediately
-#  meta: flush_handlers
+- name: Force the handler to run immediately
+  meta: flush_handlers
