--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,17 @@
 ---
+- name: Creating php-fpm installs folder
+  file:
+    dest: '{{ php_path }}/remi'
+    state: 'directory'
+
+- name: Mount and bind php-fpm remi folder structure
+  mount:
+    src: '{{ php_path }}/remi'
+    path: '/opt/remi'
+    opts: 'bind'
+    state: 'mounted'
+    fstype: 'none'
+
 - name: Include tasks for specific OS
   include: '{{ ansible_os_family }}.yml'
 
@@ -14,14 +27,17 @@
 - name: Reload the PHP-FPM service
   shell: echo ''
   notify: 'Ensure PHP-FPM service is enabled'
-  when: php_updated is changed or php_config is changed or php_service is changed
+  when: php_updated is changed or php_config is changed
 
 - name: Force the handler to run immediately
   meta: flush_handlers
 
 - name: Include prometheus exporter tasks
   include: 'exporter.yml'
+  when : exporter_is_install
 
 - name: Registered with HashiCorp Consul
   include: 'register.yml'
-  when: consul_public_register
+  when:
+    - exporter_is_install
+    - consul_public_register
