--- a/tasks/exporter.yml
+++ b/tasks/exporter.yml
@@ -12,6 +12,7 @@
   template:
     src: '{{ item.src }}'
     dest: '{{ item.dest }}'
+    backup: 'yes'
     mode: '0644'
     owner: 'root'
     group: 'root'
