--- a/tasks/firewall.yml
+++ b/tasks/firewall.yml
@@ -1,4 +1,8 @@
 ---
+- name: Gathering service facts
+  service_facts:
+  register: services_state
+
 - name: Allow php-fpm service port
   firewalld:
     port: '{{ item }}/tcp'
@@ -9,3 +13,4 @@
   loop:
     - '{{ php_fpm_port }}'
     - '{{ php_fpm_exporter_port }}'
+  when: services_state.ansible_facts.services["firewalld.service"].state == 'running'
