--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -34,10 +34,10 @@
 
 - name: Include prometheus exporter tasks
   include: 'exporter.yml'
-  when : exporter_is_install
+  when : exporter_is_install | bool
 
 - name: Registered with HashiCorp Consul
   include: 'register.yml'
   when:
-    - exporter_is_install
-    - consul_public_register
+    - exporter_is_install | bool
+    - consul_public_register | bool
