--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,8 @@ php_selinux: 'false' # SELinux security policy.
 php_path: '/data' # Specify the php-fpm installation directory.
 
 # Service Mesh #
+subscription: 'default' # Define the service subscription.
+region: 'default' # Define the service region.
 environments: 'SIT' # Define the service environment.
 exporter_is_install: false # Whether to install prometheus exporter.
 consul_public_register: false # Whether register a exporter service with public consul client.
