--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -33,7 +33,6 @@ php_process_control_timeout: '10' # Time limit for child processes to wait for a
 # PHP-FPM POOL Variables #
 php_user: 'nobody' # Unix user of processes.
 php_group: 'nobody' # Unix group of processes.
-php_listen: '0.0.0.0' # The address on which to accept FastCGI requests.
 php_listen_backlog: '16384' # The maximum rate at which a server can accept new TCP connections on a socket.
 php_listen_owner: 'nobody' # Listen owner user.
 php_listen_group: 'nobody' # Listen owner group.
@@ -43,12 +42,14 @@ php_pm_max_requests: '300' # The number of requests each child process should ex
 
 # Service Mesh #
 environments: 'Development' # Define the service environment.
+datacenter: 'dc01' # Define the DataCenter.
+domain: 'local' # Define the Domain.
 #tags: # Define the service custom label.
 #  subscription: 'default'
 #  owner: 'nobody'
 #  department: 'Infrastructure'
 #  organization: 'The Company'
-#  region: 'IDC01'
+#  region: 'China'
 exporter_is_install: false # Whether to install prometheus exporter.
 consul_public_register: false # Whether register a exporter service with public consul client.
 consul_public_exporter_token: '00000000-0000-0000-0000-000000000000' # Public Consul client ACL token.
