--- a/tasks/register.yml
+++ b/tasks/register.yml
@@ -1,9 +1,10 @@
 ---
 - name: Check register client are accessible from current host
   uri:
-    url: 'http://{{ item }}:{{ consul_public_http_port }}/v1/agent/service/register'
+    url: '{{ consul_public_http_prot }}://{{ item }}:{{ consul_public_http_port }}/v1/agent/service/register'
     method: 'GET'
     timeout: '5'
+    validate_certs: 'no'
   environment:
     no_proxy: '{{ item }}'
   loop: '{{ consul_public_clients }}'
@@ -13,15 +14,16 @@
 
 - name: Register exporter service with an http health check
   uri:
-    url: 'http://{{ item.client }}:{{ consul_public_http_port }}/v1/agent/service/register'
+    url: '{{ consul_public_http_prot }}://{{ item.client }}:{{ consul_public_http_port }}/v1/agent/service/register'
     method: 'PUT'
-    body: '{"tags":["prometheus","exporter"],"ID":"{{ inventory_hostname | upper }}_php-fpm_exporter","name":"php-fpm_exporter","address":"{{ ansible_default_ipv4.address }}","port":{{ php_fpm_exporter_port }},"meta":{"instance":"{{ inventory_hostname | upper }}","group":"{{ group_names[0] | upper }}","environment":"{{ environments | upper }}"{% if tags is defined %},{{ tags | to_json | regex_replace("{") | regex_replace("}") }}{% endif %}},"checks":[{"http":"http://{{ ansible_default_ipv4.address }}:{{ php_fpm_exporter_port }}/metrics","interval":"60s","tls_skip_verify":true,"method":"HEAD","timeout":"10s"}]}'
+    body: '{"tags":["prometheus","exporter"],"ID":"{{ inventory_hostname | upper }}_php-fpm_exporter","name":"php-fpm_exporter","address":"{{ ansible_default_ipv4.address }}","port":{{ php_fpm_exporter_port }},"meta":{"instance":"{{ inventory_hostname | upper }}","group":"{{ group_names[0] | upper }}","datacenter": "{{ datacenter | lower }}","domain":"{{ domain | lower }}","environment":"{{ environments | upper }}"{% if tags is defined %},{{ tags | to_json | regex_replace("{") | regex_replace("}") }}{% endif %}},"checks":[{"http":"http://{{ ansible_default_ipv4.address }}:{{ php_fpm_exporter_port }}/metrics","interval":"60s","tls_skip_verify":true,"method":"HEAD","timeout":"10s"}]}'
     body_format: 'json'
     status_code: '200'
     headers:
       X-Consul-Token: '{{ consul_public_exporter_token }}'
       X-Requested-By: '{{ ansible_default_ipv4.address }}'
       cache-control: 'no-cache'
+    validate_certs: 'no'
   environment:
     no_proxy: '{{ item.client }}'
   loop: "{{ check_consul_reg.results | json_query('[*].{client:item,status:status}') }}"
