modified:   README.md 	modified:   defaults/main.yml 	modified:   handlers/RedHat.yml 	modified:   tasks/RedHat.yml 	modified:   tasks/configureation.yml 	modified:   templates/php-fpm.conf.j2 	modified:   templates/www.conf.j2 	modified:   vars/RedHat.yml

--- a/handlers/RedHat.yml
+++ b/handlers/RedHat.yml
@@ -1,7 +1,7 @@
 ---
 - name: Ensure PHP-FPM service is enabled
   systemd:
-    name: 'php{{ php_version }}-php-fpm.service'
+    name: 'php-fpm.service'
     enabled: 'yes'
     state: 'restarted'
     daemon_reload: 'yes'
