--- a/tasks/exporter.yml
+++ b/tasks/exporter.yml
@@ -3,8 +3,8 @@
   unarchive:
     src: 'php-fpm_exporter.tar.xz'
     dest: '/usr/local/bin'
-    owner: 'nobody'
-    group: 'nobody'
+    owner: 'apache'
+    group: 'apache'
     mode: '0755'
   register: php_exporter_updated
 
