modified:   vars/RedHat.yml

--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -21,7 +21,7 @@ php_packages:
   - 'php-pecl-apcu'
   - 'php-pecl-memcached'
   - 'php-pecl-mongodb'
-  - 'php-pecl-redis5'
+  - 'php-pecl-redis'
   - 'php-pdo'
   - 'php-pgsql'
   - 'php-ldap'
