--- a/tasks/firewall.yml
+++ b/tasks/firewall.yml
@@ -1,9 +1,9 @@
 ---
-- name: Gathering service facts
+- name: Gathering service facts.
   service_facts:
   register: services_state
 
-- name: Allow php-fpm service port
+- name: Allow php-fpm service port.
   firewalld:
     port: '{{ item }}/tcp'
     zone: 'public'
@@ -13,4 +13,6 @@
   loop:
     - '{{ php_fpm_port }}'
     - '{{ php_fpm_exporter_port }}'
-  when: services_state.ansible_facts.services["firewalld.service"].state == 'running'
+  when:
+    - services_state.ansible_facts.services["firewalld.service"] is defined
+    - services_state.ansible_facts.services["firewalld.service"].state == 'running'
