--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -1,9 +1,9 @@
 ---
 php_remi_repo_name: 'remi-php{{ php_version }}'
-php_remi_repo_url: 'http://mirrors.tuna.tsinghua.edu.cn/remi/enterprise/{{ ansible_distribution_major_version }}/php{{ php_version }}/$basearch'
+php_remi_repo_url: 'http://mirrors.tuna.tsinghua.edu.cn/remi/enterprise/$releasever/php{{ php_version }}/$basearch/'
 
 php_safe_repo_name: 'remi-safe'
-php_safe_repo_url: 'http://mirrors.tuna.tsinghua.edu.cn/remi/enterprise/{{ ansible_distribution_major_version }}/safe/$basearch'
+php_safe_repo_url: 'http://mirrors.tuna.tsinghua.edu.cn/remi/enterprise/$releasever/safe/$basearch/'
 
 php_packages:
   - 'php'
